--- a/realt-client/application/templates/user_applications.html
+++ b/realt-client/application/templates/user_applications.html
@@ -47,7 +47,7 @@
 
             {% else %}
 
-                <div class="auth-fail">
+                <div style="margin-top: 200px;">
                     <div class="row">
                         <div class="col-md-4 col-md-offset-4">
                                 <div class="panel panel-info">
