Dynamic updating of applications' table after applying filter via AJAX

--- a/realt-client/application/templates/public_applications.html
+++ b/realt-client/application/templates/public_applications.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="col-md-9">
-                <table class="userApplicationsTable table table-responsive table-striped table-bordered table-hover header-fixed">
+                <table class="userApplicationsTable table table-responsive table-striped table-bordered table-hover header-fixed" id="publicApplicationsTable">
                     <thead>
                         <tr>
                             <td>№</td>
