--- a/realt-client/application/templates/admin_applications.html
+++ b/realt-client/application/templates/admin_applications.html
@@ -6,6 +6,8 @@
 <div class="container">
     <div class="row">
 
+        {% if not empty_apps %}
+
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse" style="background-color: steelblue;">
                 <span class="sr-only">Toggle navigation</span>
@@ -27,7 +29,9 @@
         <div class="tab-content">
 
             <div id="allApps" class="tab-pane fade in active">
+            <p>Всего объявлений: {{ applications_count }}</p>
                 <table class="adminApplicationsTable table table-responsive table-striped table-bordered table-hover header-fixed">
+
                     <thead>
                         <tr>
                             <td>№</td>
@@ -165,6 +169,7 @@
                             <th>Тип собственности</th>
                             <th>Статус</th>
                             <th>Дата создания</th>
+                            <th>Кол-во просмотров</th>
                             <th>Выбрать</th>
                         </tr>
                     </thead>
@@ -185,6 +190,7 @@
                                 <td data-toggle="modal" data-target=".app-content-modal">{{ app.property_type }}</td>
                                 <td data-toggle="modal" data-target=".app-content-modal">Отклонено</td>
                                 <td data-toggle="modal" data-target=".app-content-modal">{{ app.created_date }}</td>
+                                <td data-toggle="modal" data-target=".app-content-modal">{{ app.view_count }}</td>
                                 <td><input type="checkbox"></td>
                             </tr>
                         {% endif %}
@@ -192,7 +198,7 @@
                 </table>
                 </div>
             </div>
-
+        <input type="text" id="viewed_user_id" hidden="hidden" value="{{ session.user_id }}">
         </div>
 
         </div><!--tab-content-->
@@ -205,6 +211,21 @@
             <button class="btn btn-block btn-default" id="delete-app-btn">Удалить</button>
         </div>
     </div>
+
+    {% else %}
+
+    <div style="margin-top: 200px;">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                    <div class="panel panel-info">
+                      <div class="panel-heading">Список объявлений пуст</div>
+                      <div class="panel-body">На сайте нет объявлений.</div>
+                    </div>
+            </div>
+        </div>
+    </div>
+
+    {% endif %}
 
     </div><!--rowdiv!-->
 </div><!--container!-->
