Add statistics for viewing applications' count depend on type

--- a/realt-client/application/templates/public_applications.html
+++ b/realt-client/application/templates/public_applications.html
@@ -78,7 +78,9 @@
                 </div>
 
                 <div class="col-md-9">
-                Всего объявлений опубликовано: {{ applications_count }}
+                Всего объявлений опубликовано: {{ applications_count }} <br>
+                На продажу: {{ applications_sale_count }} <br>
+                На аренду: {{ applications_rent_count }}
                 <table class="userApplicationsTable table table-responsive table-striped table-bordered table-hover header-fixed" id="publicApplicationsTable">
                     <thead>
                         <tr>
