Added content to the main page

--- a/realt-client/application/templates/index.html
+++ b/realt-client/application/templates/index.html
@@ -12,7 +12,7 @@
     {% include 'parts/slider.html' %}
   
   <div class="container hero-text2">
-  <h3>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat<br/> fabulas complectitur deterruisset at pro</h3>
+  <h3>Мы позиционируем себя как площадку для размещения объявлений на аренду и продажу различных типов недвижимости</h3>
   </div>
 </section>
 <section id="services" class="page-section colord">
@@ -20,29 +20,29 @@
     <div class="row"> 
       <!-- item -->
       <div class="col-md-3 text-center"> <i class="circle"><img src="{{ url_for('static', filename='img/5.png') }}" alt="" /></i>
-        <h3>New Projects</h3>
-        <p>Nullam ac rhoncus sapien, non gravida purus. Alinon elit imperdiet congue. Integer elit imperdiet congue.</p>
+        <h3>Контакты</h3>
+        <p>Возможность связаться с публикатором объявления, позвонив по указанному номеру телефона.</p>
       </div>
       <!-- end: --> 
       
       <!-- item -->
       <div class="col-md-3 text-center"><i class="circle"> <img src="{{ url_for('static', filename='img/1.png') }}" alt="" /></i>
-        <h3>Plots for Sale</h3>
-        <p>Nullam ac rhoncus sapien, non gravida purus. Alinon elit imperdiet congue. Integer elit imperdiet congue.</p>
+        <h3>Размещение объявлений</h3>
+        <p>Добавление неограниченного количества объявлений.</p>
       </div>
       <!-- end: --> 
       
       <!-- item -->
       <div class="col-md-3 text-center"><i class="circle"> <img src="{{ url_for('static', filename='img/2.png') }}" alt="" /></i>
-        <h3>Luxury Villas</h3>
-        <p>Nullam ac rhoncus sapien, non gravida purus. Alinon elit imperdiet congue. Integer ultricies sed elit impe.</p>
+        <h3>Успешные сделки</h3>
+        <p>Большое количество пользователей остаются довольны своим выбором.</p>
       </div>
       <!-- end: --> 
       
       <!-- item -->
       <div class="col-md-3 text-center"><i class="circle"> <img src="{{ url_for('static', filename='img/3.png') }}" alt="" /></i>
-        <h3>Rent a House</h3>
-        <p>Nullam ac rhoncus sapien, non gravida purus. Alinon elit imperdiet congue. Integer elit imperdiet conempus.</p>
+        <h3>Аренда недвижимости</h3>
+        <p>Здесь можно найти хороший вариант для аренды недвижимости нужного типа.</p>
       </div>
       <!-- end:--> 
     </div>
@@ -53,40 +53,19 @@
   <div class="container">
     <div class="heading text-center"> 
       <!-- Heading -->
-      <h2>About Us</h2>
-      <p>At lorem Ipsum available, but the majority have suffered alteration in some form by injected humour.</p>
-    </div>
-    <div class="row feature design">
-      <div class="area1 columns right">
-        <h3>Clean and Modern Design.</h3>
-        <p>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat fabulas complectitur deterruisset at pro. Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
-          Nec et jority have suffered alteration. </p>
-        <p>Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
-          Nec et amet vidisse mentitumsstie percipitoleat fabulas. </p>
-          <a href="#" class="btn">Request Quote</a>
-      </div>
+      <h2>О нас</h2>
+      <p>Мы молодая перспектвная компания, которая предоставляет информационные услуги в сфере недвижимости.</p>
     </div>
     <div class="row dataTxt">	
             <div class="col-md-4 col-sm-6">
-                <h4>What We Do?</h4>
-                <p>Lorem ipsum dolor consectetursit amet, consectetur adipiscing elit consectetur euismod </p>
-                <p>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat fabulas complectitur deterruisset at pro. Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea.</p>
-
+                <h4>Что мы делаем?</h4>
+                <p>Поиск нового жилья и переезд – всегда стресс, связанный со многими хлопотами и неудобствами. Нужно предусмотреть столько мелочей, изучить массу вариантов, познакомиться с новым районом, обустроить квартиру и многое-многое другое, не говоря уже о трудностях переезда из другого города.</p>
                 <br>
             </div>
 
-            <div class="col-md-4 col-sm-6">
-
-                <h4>Why Choose Us?</h4>
-                <p>Lorem ipsum dolor consectetursit amet, consectetur adipiscing elit consectetur euismod </p>
-                <ul class="listArrow">
-                    <li>Lorem ipsum dolor consectetursit amet, consectet</li>
-                    <li>Has molestie percipit an. Falli volumus efficiantur</li>
-                    <li>Falli volumus efficiantur sed id, ad vel noster</li>
-                    <li>Lorem ipsum dolor consectetursit amet, consectetur</li>
-                    <li>Ius ut etiam vivendo, graeci iudicabit constitutoa</li>
-                </ul>
-                <!-- Accordion starts -->
+            <div class="col-md-4 col-sm-6" style="margin-top: 40px;">
+                <p>Мы, как никто другой, не понаслышке знакомы со всеми сложностями этого процесса и поэтому поставили перед собой задачу максимально облегчить его для наших клиентов.
+            Наша работа - сделать поиск Вашей квартиры в Беларуси наиболее комфортным и приятным занятием, каким оно и должно быть, ведь она станет Вашим новым домом!</p>
                 </div>
 
             <div class="col-md-4 col-sm-6">
@@ -102,9 +81,9 @@
   <div class="container">
     <div class="row">
         {% if not session.login %}
-            <div class="row">
-                <div class="heading text-center"><h2>Регистрация</h2></div>
-            </div>
+            <div class="hero-text2">
+              <h3>Регистрация на сайте</h3>
+              </div>
             {% include 'parts/sign-up.html' %}
         {% endif %}
     </div>
