--- a/realt-client/application/templates/parts/footer.html
+++ b/realt-client/application/templates/parts/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 text-center">Realt 2016</div>
+      <div class="col-sm-12 text-center" style="margin-top: 15px;">Realt 2016. BSUIR, Logistics.</div>
     </div>
   </div>
 </footer>
