Change style of editing user page.

--- a/realt-client/application/templates/edit_profile.html
+++ b/realt-client/application/templates/edit_profile.html
@@ -58,12 +58,9 @@
         </form>
         {% endif %}
     {% endfor %}
-    <div class="modal-footer">
-        <label class="col-md-4 control-label" for="edit-private-user-btn"></label>
-        <div class="col-md-4 center-block">
-            <button id="edit-private-user-btn" class="btn btn-primary center-block" style="margin-top: 20px;">Изменить</button>
+        <div class="col-md-4 col-md-offset-4">
+            <button id="edit-private-user-btn" class="btn btn-primary btn-block" style="margin-top: 20px;">Изменить</button>
         </div>
-    </div>
 </section>
 </div>
 
