--- a/realt-client/application/templates/parts/login.html
+++ b/realt-client/application/templates/parts/login.html
@@ -20,7 +20,7 @@
             </div>
             <div class="modal-footer">
                   <button type="submit" class="btn btn-primary" id="login-btn">Войти</button>
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
             </div>
           </form>
        </div>
