--- a/realt-client/application/templates/parts/sign-up.html
+++ b/realt-client/application/templates/parts/sign-up.html
@@ -1,41 +1,54 @@
-<form class="reg-form">
-    <div class="col-md-3 col-md-offset-3">
-        <div class="form-group">
-            <label for="firstname">Имя:</label>
-            <input type="text" class="form-control" name="firstname" id="firstname" placeholder="Введите имя" required>
+
+    {% if not session.login %}
+        <section id="signUp" class="page-section colord">
+      <div class="container">
+        <div class="row">
+            <div class="hero-text2">
+              <h3>Регистрация на сайте</h3>
+              </div>
+            <form class="reg-form">
+                <div class="col-md-3 col-md-offset-3">
+                    <div class="form-group">
+                        <label for="firstname">Имя:</label>
+                        <input type="text" class="form-control" name="firstname" id="firstname" placeholder="Введите имя" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="lastname">Фамилия:</label>
+                        <input type="text" class="form-control" name="lastname" id="lastname" placeholder="Введите фамилию" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="birthday">Дата рождения:</label>
+                        <input type="text" class="form-control" name="birthday" id="birthday" placeholder="Введите дату рождения" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="phoneNumber">Номер телефона:</label>
+                        <input type="tel" class="form-control" name="phone_number" id="phoneNumber" placeholder="Введите номер телефона" required>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Введите email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="regLogin">Логин:</label>
+                        <input type="regLogin" class="form-control" name="login" id="regLogin" placeholder="Введите логин" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password1">Пароль:</label>
+                        <input type="password" class="form-control" name="password" id="password1" placeholder="Введите пароль" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password2">Повторите пароль:</label>
+                        <input type="password" class="form-control" id="password2" placeholder="Повторите пароль" required>
+                    </div>
+                </div>
+                <div class="col-md-4 col-md-offset-5">
+                    <button type="button" class="btn btn-primary" id="reg-btn">Зарегистрироваться</button>
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="lastname">Фамилия:</label>
-            <input type="text" class="form-control" name="lastname" id="lastname" placeholder="Введите фамилию" required>
-        </div>
-        <div class="form-group">
-            <label for="birthday">Дата рождения:</label>
-            <input type="text" class="form-control" name="birthday" id="birthday" placeholder="Введите дату рождения" required>
-        </div>
-        <div class="form-group">
-            <label for="phoneNumber">Номер телефона:</label>
-            <input type="tel" class="form-control" name="phone_number" id="phoneNumber" placeholder="Введите номер телефона" required>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control" name="email" id="email" placeholder="Введите email" required>
-        </div>
-        <div class="form-group">
-            <label for="regLogin">Логин:</label>
-            <input type="regLogin" class="form-control" name="login" id="regLogin" placeholder="Введите логин" required>
-        </div>
-        <div class="form-group">
-            <label for="password1">Пароль:</label>
-            <input type="password" class="form-control" name="password" id="password1" placeholder="Введите пароль" required>
-        </div>
-        <div class="form-group">
-            <label for="password2">Повторите пароль:</label>
-            <input type="password" class="form-control" id="password2" placeholder="Повторите пароль" required>
-        </div>
-    </div>
-    <div class="col-md-4 col-md-offset-5">
-        <button type="button" class="btn btn-primary" id="reg-btn">Зарегистрироваться</button>
-    </div>
-</form>
+      </div>
+  <!--/.container-->
+</section>
+    {% endif %}
