--- a/realt-client/application/templates/admin_applications.html
+++ b/realt-client/application/templates/admin_applications.html
@@ -29,10 +29,10 @@
         <div class="tab-content">
 
             <div id="allApps" class="tab-pane fade in active">
-            <p>Всего объявлений: {{ applications_count }}</p>
+            <p>Всего объявлений: <span class="badge" style="background: blue;">{{ applications_count }}</span></p>
                 <table class="adminApplicationsTable table table-responsive table-striped table-bordered table-hover header-fixed">
 
-                    <thead>
+                    <thead style="background: lightblue;">
                         <tr>
                             <td>№</td>
                             <th>Пользователь</th>
@@ -78,7 +78,7 @@
         <div id="approvedApps" class="tab-pane fade">
                 <div class="col-md-12">
                    <table class="adminApplicationsTable table table-responsive table-striped table-bordered table-hover header-fixed">
-                    <thead>
+                    <thead style="background: lightblue;">
                         <tr>
                             <td>№</td>
                             <th>Пользователь</th>
@@ -119,7 +119,7 @@
             <div id="notApprovedApps" class="tab-pane fade">
                 <div class="col-md-12">
                 <table class="adminApplicationsTable table table-responsive table-striped table-bordered table-hover header-fixed">
-                    <thead>
+                    <thead style="background: lightblue;">
                         <tr>
                             <td>№</td>
                             <th>Пользователь</th>
@@ -160,7 +160,7 @@
             <div id="rejectedApps" class="tab-pane fade">
                 <div class="col-md-12">
                 <table class="adminApplicationsTable table table-responsive table-striped table-bordered table-hover header-fixed">
-                    <thead>
+                    <thead style="background: lightblue;">
                         <tr>
                             <td>№</td>
                             <th>Пользователь</th>
