--- a/realt-client/application/templates/parts/application_content.html
+++ b/realt-client/application/templates/parts/application_content.html
@@ -13,7 +13,7 @@
                 </div>
 
             <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button>
+                <button class="btn btn-warning" data-dismiss="modal" aria-hidden="true">Закрыть</button>
             </div>
             </div>
       </div>
