--- a/realt-client/application/templates/parts/popup.html
+++ b/realt-client/application/templates/parts/popup.html
@@ -9,7 +9,7 @@
                  <p id="popup-message"></p>
              </div>
              <div class="modal-footer">
-                 <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+                 <button type="button" class="btn btn-warning" data-dismiss="modal">Закрыть</button>
              </div>
          </div>
      </div>
