--- a/realt-client/application/templates/users.html
+++ b/realt-client/application/templates/users.html
@@ -5,7 +5,7 @@
 {% include 'parts/auth_user_menu.html' %}
 
 <section class="margin-top-from-nav" id="users">
-    <h1 class="heading text-center">Список зарегистрированнных пользователей</h1>
+    <h3 class="heading text-center">Список зарегистрированнных пользователей</h3>
     <div>
     <table id="usersTable" class="table table-responsive table-striped table-bordered table-hover header-fixed">
         <thead>
@@ -40,11 +40,12 @@
     </table>
 </div>
 <div class="col-md-4 col-md-offset-4">
-    <button id="deleteUsersBtn" class="btn btn-primary">Удалить</button>
+    <button id="deleteUsersBtn" class="btn btn-primary btn-block" style="margin-bottom: 30px;">Удалить</button>
 </div>
 </section>
 {% include 'parts/popup.html' %}
 {% include 'parts/edit_user.html' %}
+{% include 'parts/footer.html' %}
 {% include 'parts/scripts.html' %}
 </body>
 </html>
