Changed styles of some pages

--- a/realt-client/application/templates/parts/auth_user_menu.html
+++ b/realt-client/application/templates/parts/auth_user_menu.html
@@ -18,7 +18,7 @@
         <ul class="nav navbar-nav" id="authAdminNav">
           <li><a href="{{ url_for('private') }}">Профиль</a></li>
           <li><a href="{{ url_for('get_users') }}">Просмотр пользователей</a></li>
-          <li><a href="{{ url_for('admin_applications') }}">Объявления</a></li>
+          <li><a href="{{ url_for('admin_applications') }}">Управление объявлениями</a></li>
         </ul>
         {% endif %}
      </div>
