--- a/realt-client/application/templates/user_applications.html
+++ b/realt-client/application/templates/user_applications.html
@@ -9,9 +9,9 @@
             {% if not empty_apps %}
 
                 <h3 class="heading text-center">Список моих объявлений</h3>
-                Всего объявлений подано: {{ applications_count }}
+                Всего объявлений подано: <span class="badge" style="background: blue;">{{ applications_count }}</span>
                 <table class="userApplicationsTable table table-responsive table-striped table-bordered table-hover header-fixed">
-                    <thead>
+                    <thead style="background: lightblue;">
                         <tr>
                             <td>№</td>
                             <th>Тип объявления</th>
