--- a/realt-client/application/static/css/styles.css
+++ b/realt-client/application/static/css/styles.css
@@ -543,12 +543,13 @@ padding: 22px 0 !important;
 
 #login-user-nav {
 	margin-top: -50px;
-	margin-right: 1300px;
+	margin-right: 950px;
 }
 
 #authUserNav, #authAdminNav {
 	margin-bottom: -20px;
 	margin-right: -484px;
+	width: 600px;
 }
 
 .margin-top-from-nav {
