--- a/realt-client/application/templates/application_form.html
+++ b/realt-client/application/templates/application_form.html
@@ -1,9 +1,10 @@
 {% include 'parts/head.html' %}
+<body style="background: #9DF595;">
 {% include 'parts/auth_user_menu.html' %}
 
 <div class="content-container">
     <h3 class="heading text-center">Форма для объявления</h3>
-<div class="container">
+<div class="container" style="background: #9DF595;">
     <div class="row">
       <form role="form" id="applicationForm">
 
@@ -133,4 +134,5 @@
 
 {% include 'parts/footer.html' %}
 {% include 'parts/scripts.html' %}
+</body>
 <script type="text/javascript" src="{{ url_for('static', filename='js/application_form.js') }}"></script>
