Change style of pablic application page

--- a/realt-client/application/templates/application_form.html
+++ b/realt-client/application/templates/application_form.html
@@ -1,10 +1,10 @@
 {% include 'parts/head.html' %}
-<body style="background: #9DF595;">
+<body style="background: #FCFCFC;">
 {% include 'parts/auth_user_menu.html' %}
 
 <div class="content-container">
     <h3 class="heading text-center">Форма для объявления</h3>
-<div class="container" style="background: #9DF595;">
+<div class="container" style="background: #FCFCFC;">
     <div class="row">
       <form role="form" id="applicationForm">
 
