Change style of application content popup

--- a/realt-client/application/templates/parts/application_content.html
+++ b/realt-client/application/templates/parts/application_content.html
@@ -2,17 +2,17 @@
 <div class="container">
     <div class="modal fade app-content-modal" tabindex="-1" role="dialog" id="appContent">
         <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
+            <div class="modal-content" >
+                <div class="modal-header" style="background: #FFD77A">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-                 <h3>Объявление</h3>
+                 <h3 style="text-align: center">Объявление</h3>
             </div>
 
-                <div class="app-content">
+                <div class="app-content" style="background: #F5F5F5">
 
                 </div>
 
-            <div class="modal-footer">
+            <div class="modal-footer" style="background: #F5F5F5">
                 <button class="btn btn-warning" data-dismiss="modal" aria-hidden="true">Закрыть</button>
             </div>
             </div>
